# zipher-app

./: .gitmodules  README.md
.claude/: settings.json
docs/: hardware-wallet.md
rust/: Cargo.toml
rust/crates/cli/: Cargo.toml
rust/crates/cli/src/: main.rs
rust/crates/engine/: Cargo.toml
rust/crates/engine/src/: hw_signer.rs  lib.rs  send.rs  sync.rs
